--- a/Doraemon/index.html
+++ b/Doraemon/index.html
@@ -10,9 +10,8 @@
   <body>
     <!-- <model-viewer> HTML element -->
     <model-viewer src="scene (3).glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" auto-rotate>
-      <button class="Hotspot" slot="hotspot-1" data-position="0.06410912216779907m -0.026560279740290585m 0.1393056561588315m" data-normal="0.21019539493305495m -0.5140705120473084m 0.8315944952874299m" data-visibility-attribute="visible">
-          <div class="HotspotAnnotation">多拉A夢
-          </div>
+      <button class="Hotspot" slot="hotspot-1" data-position="0.03688636185087492m -0.06907696478639302m 0.15200304479265614m" data-normal="0.6041973482422195m 0.5723028215301768m 0.5544502185459653m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">哆啦A夢</div>
       </button>
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
